# ComfyUI_RyanOnTheInside

./: .gitattributes  .gitignore  LICENSE  __init__.py  audio_latent_blend.py  external_integration.py  node_configs.py  pyproject.toml  readme.md  requirements.txt  test_librosa_replacement_workflow.json
.github/workflows/: publish.yml
data/midi_files/: drummid.mid  prom_single_track.mid  promiscuoius__chorus.mid  promiscuous_chorus_melody.mid  (+3 more)
docs/: latent_channel_semantics.md
examples/: FLEX_Advanced_Audio_Reactive_expressionVERSION2.json  FLEX_Advanced_Inserting_expressions_into_vidVERSION2.json  ace_step_1_t2m.json  acestep_extend.json  acestep_image2video.json  acestep_repaint.json  audio_ipadapter_weights.json  audio_ipadapter_weights_plusbass.json  audio_lora.json  audio_lora_version2.json  audio_particles.json  audio_pose_wan_vace.json  audio_prompt_travel.json  audioreactive_live_portrait_depthflow.json  blood_buubbles.json  blood_buubbles_version2.json  circl_line_visualizer.json  circl_line_visualizerVERSION2.json  depth_chamber_image VERSION22.json  depth_chamber_image.json  depth_chamber_video.json  depth_chamber_videoVERSION22.json  earth_example.json  face_mesh_visualizer.json  face_mesh_visualizerVERSION2.json  flex_tutorial.json  headbang_bear.json  iris_examp.json  lip_sync_visualizerVERSION2.json  mask_examples.json  motion_activated.json  multi_instrument_audio_visualizer.json  particle_systems_tutorial.json  playhead_tutorial.json  playhead_tutorialVERSION2.json  proximity_particle.json  ryanontheinside_audio_classification.json  seek_tutorial.json  slilme_tutorial.json  slilme_tutorialVERSION2.json  (+4 more)
node_configs/: node_configs.py
nodes/: __init__.py  node_utilities.py  utility_nodes.py
scripts/: fill_tooltips_from_configs.py  generate_tooltip_stubs.py
tooltips/: __init__.py  tooltip_manager.py
web/: js-dos-api.js
(+127 files in other folders)
