[project]
name = "comfyui_ryanonyheinside"
description = "Custom nodes introducing everything-reactivity and timelines to ComfyUI"
version = "2.1.9"
license = {file = "LICENSE"}

dependencies = ["pygame", "opencv-python>=4.5.0", "scipy", "torchaudio", "pillow", "pymunk>=6.8.0,<7.0.0", "matplotlib", "openunmix", "mido", "scikit-image"]

[project.urls]
Repository = "https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ryanontheinside"
DisplayName = "RyanOnTheInside"
Icon = "🌀"
